# SmartHome_Server

./: CMakeLists.txt  FetchuWebSockets.cmake  README.md  config.json  file_paths.h.in  main.cpp
SmartHome_Webpage/: main.html
light_control/: CMakeLists.txt  light_control.cpp  light_control.h
plug_control/: CMakeLists.txt  plug_control.cpp  plug_control.h
